ingresses/ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: issuer
  name: echo-ingress
spec:
  rules:
    - host: www.echoday3.tk
      http: 
        paths:
          - backend:
              serviceName: echo
              servicePort: 80
  tls:
    - hosts:
      - www.echoday3.tk
      secretName: issuer
